--- a/src/exercises/2.2.html
+++ b/src/exercises/2.2.html
@@ -23,7 +23,7 @@
       </button>
 
       <!-- 💡 Sidebar[1/3] Add inert attribute to the hidden sidebar -->
-      <div class="menu js-navTarget">
+      <div class="menu js-navTarget" inert="true">
         <ul>
           <li><a href="../index.html">Home</a></li>
           <li><a href="../briefings/2.1.html">Exercise 2.1</a></li>
@@ -34,7 +34,7 @@
     </nav>
 
     <!-- 💡 Sidebar[2/3] Add inert polifyll. -->
-    <!-- <script src="../assets/polyfill-inert.js"></script> -->
+    <script src="../assets/polyfill-inert.js"></script>
 
     <script>
       // JS already done to toggle the sidebar
@@ -47,7 +47,7 @@
         elNavTarget.classList[method]('isVisible');
 
         // 💡 Sidebar[3/3] Here's the JS needed to set the inert attr.
-        /* elNavTarget.inert = isVisible */
+        elNavTarget.inert = isVisible
       })
     </script>
   </header>
