--- a/src/exercises/3.1.html
+++ b/src/exercises/3.1.html
@@ -26,6 +26,7 @@ Notes:
       <h2 class="g-cardTitle">Case #1</h2>
       <!-- 💡 A link must have a name, always. -->
       <a href="#profile" class="btn btnCircle">
+        <span class="sr-only">Checkout</span>
         <span class="icon-bag"></span>
       </a>
     </div>
@@ -36,8 +37,8 @@ Notes:
       <!-- 💡 1/1 Besides the missing accessible label, we should also indicate
         if the button is *pressed* or not. Use aria-pressed with value as "true" or "false" -->
       <button class="btn btnToggle js-addToFavorite">
-
         <svg class="btn-svg" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 512 512">
+          <title>Add to favorites</title>
           <path
             d="M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z">
           </path>
@@ -54,7 +55,7 @@ Notes:
           elToggle.classList[method]('isPressed');
           // and semantically
           // 💡 2/2 ...you just need to uncomment it
-          // elToggle.setAttribute("aria-pressed", !isPressed);
+          elToggle.setAttribute("aria-pressed", !isPressed);
         })
       </script>
     </div>
@@ -66,7 +67,7 @@ Notes:
         Links should make sense out of context. Phrases such as "click here" or "read more"
         are ambiguous when read out of context.
         <!-- 💡 Could we provide a unique link description? -->
-        <a href="https://webaim.org/techniques/hypertext/link_text" class="link">
+        <a href="https://webaim.org/techniques/hypertext/link_text" class="link" aria-label="More about links">
           Read more.
         </a>
       </p>
@@ -74,14 +75,14 @@ Notes:
       <p>
         Adding alternative text for images is the first principle of web accessibility. It is also one
         of the most difficult to properly implement.
-        <a href="https://webaim.org/techniques/alttext/" class="link">
+        <a href="https://webaim.org/techniques/alttext/" class="link" aria-label="More about image's alt text">
           Read more.
         </a>
       </p>
 
       <p>
         Please, read more about writing
-        guidelines <a href="https://www.w3.org/WAI/tips/writing/" class="link">here</a>.
+        guidelines <a href="https://www.w3.org/WAI/tips/writing/" class="link" aria-label="More about writing guidelines">here</a>.
       </p>
     </div>
 
@@ -95,7 +96,7 @@ Notes:
         -->
       <nav>
         <ul>
-          <li><a href="../briefings/3.1.html" class="link isCurrent">Exercise 3.1</a></li>
+          <li><a href="../briefings/3.1.html" class="link isCurrent" aria-current="true">Exercise 3.1</a></li>
           <li><a href="../briefings/3.2.html" class="link">Exercise 3.2</a></li>
           <li><a href="../briefings/3.3.html" class="link">Exercise 3.3</a></li>
         </ul>
@@ -110,6 +111,7 @@ Notes:
       <h2 class="g-cardTitle">Case #5</h2>
       <div class="g-alert g-alert--warning">
         <svg viewbox="0 0 24 24">
+          <title>Warning</title>
           <path d="M12 5.99L19.53 19H4.47L12 5.99M12 2L1 21h22L12 2zm1 14h-2v2h2v-2zm0-6h-2v4h2v-4z"></path>
         </svg>
         Your subscription will end in 6 days.
@@ -123,8 +125,8 @@ Notes:
         The emojis are confusing, right? A mix of aria-hidden and .sr-only can be a solution. -->
       <p>
         Made with
-        love ❤️
-        instead of ☕,
+        love <span aria-hidden="true">❤️</span>
+        instead of <span class="sr-only">coffee</span><span aria-hidden="true">☕</span>,
         just for you!
       </p>
     </div>
@@ -139,7 +141,7 @@ Notes:
          - Option A: Add role="img" attribute with an aria-label
          - Option B: Hide <pre> from SR and add a custom description for SR only.
         -->
-      <pre>
+      <pre role="img" aria-label="ASCII elephant">
             __     __
            /  \~~~/  \
      ,----(     ..    )
